--- a/SivirCoffee/SivirCoffee.AuthenticationService/SivirCoffee.AuthenticationService.csproj
+++ b/SivirCoffee/SivirCoffee.AuthenticationService/SivirCoffee.AuthenticationService.csproj
@@ -8,7 +8,14 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="Microsoft.AspNetCore.Authentication.JwtBearer" Version="8.0.7" />
     <PackageReference Include="Swashbuckle.AspNetCore" Version="6.4.0" />
+    <PackageReference Include="System.IdentityModel.Tokens.Jwt" Version="7.6.3" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <Folder Include="Controllers\" />
+    <Folder Include="Infraestructure\Migrations\" />
   </ItemGroup>
 
 </Project>
