--- a/SivirCoffee/SivirCoffee.AuthenticationService/SivirCoffee.AuthenticationService.csproj
+++ b/SivirCoffee/SivirCoffee.AuthenticationService/SivirCoffee.AuthenticationService.csproj
@@ -9,12 +9,14 @@
 
   <ItemGroup>
     <PackageReference Include="Microsoft.AspNetCore.Authentication.JwtBearer" Version="8.0.7" />
+    <PackageReference Include="Microsoft.EntityFrameworkCore" Version="9.0.0-preview.6.24327.4" />
+    <PackageReference Include="Npgsql" Version="8.0.3" />
     <PackageReference Include="Swashbuckle.AspNetCore" Version="6.4.0" />
     <PackageReference Include="System.IdentityModel.Tokens.Jwt" Version="7.6.3" />
   </ItemGroup>
 
   <ItemGroup>
-    <Folder Include="Controllers\" />
+    <Folder Include="Application\Controllers\" />
     <Folder Include="Infraestructure\Migrations\" />
   </ItemGroup>
 
