--- a/SivirCoffee/SivirCoffee.PaymentService/SivirCoffee.PaymentService.csproj
+++ b/SivirCoffee/SivirCoffee.PaymentService/SivirCoffee.PaymentService.csproj
@@ -20,6 +20,7 @@
     </PackageReference>
     <PackageReference Include="Npgsql.EntityFrameworkCore.PostgreSQL" Version="8.0.4" />
     <PackageReference Include="Npgsql.EntityFrameworkCore.PostgreSQL.Design" Version="1.1.0" />
+    <PackageReference Include="RabbitMQ.Client" Version="7.0.0-rc.5" />
     <PackageReference Include="Swashbuckle.AspNetCore" Version="6.4.0" />
   </ItemGroup>
 
