--- a/SivirCoffee/SivirCoffee.OrderService/SivirCoffee.OrderService.csproj
+++ b/SivirCoffee/SivirCoffee.OrderService/SivirCoffee.OrderService.csproj
@@ -18,6 +18,7 @@
       <PrivateAssets>all</PrivateAssets>
       <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
     </PackageReference>
+    <PackageReference Include="Microsoft.Extensions.DependencyInjection" Version="8.0.0" />
     <PackageReference Include="Npgsql.EntityFrameworkCore.PostgreSQL" Version="8.0.4" />
     <PackageReference Include="Npgsql.EntityFrameworkCore.PostgreSQL.Design" Version="1.1.0" />
     <PackageReference Include="RabbitMQ.Client" Version="7.0.0-rc.5" />
