microservices implementation #endPoints

--- a/SivirCoffee/SivirCoffee.AuthenticationService/SivirCoffee.AuthenticationService.csproj
+++ b/SivirCoffee/SivirCoffee.AuthenticationService/SivirCoffee.AuthenticationService.csproj
@@ -32,4 +32,8 @@
     <Folder Include="Domain\" />
   </ItemGroup>
 
+  <ItemGroup>
+    <ProjectReference Include="..\SivirCoffee.MenuService\SivirCoffee.MenuService.csproj" />
+  </ItemGroup>
+
 </Project>
