--- a/SivirCoffee/SivirCoffee.OrderService/SivirCoffee.OrderService.csproj
+++ b/SivirCoffee/SivirCoffee.OrderService/SivirCoffee.OrderService.csproj
@@ -26,7 +26,9 @@
   </ItemGroup>
 
   <ItemGroup>
+    <ProjectReference Include="..\SivirCoffee.AuthenticationService\SivirCoffee.AuthenticationService.csproj" />
     <ProjectReference Include="..\SivirCoffee.MenuService\SivirCoffee.MenuService.csproj" />
+    <ProjectReference Include="..\SivirCoffee.PaymentService\SivirCoffee.PaymentService.csproj" />
   </ItemGroup>
 
 </Project>
