--- a/SivirCoffee/SivirCoffee.AuthenticationService/SivirCoffee.AuthenticationService.csproj
+++ b/SivirCoffee/SivirCoffee.AuthenticationService/SivirCoffee.AuthenticationService.csproj
@@ -8,6 +8,7 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="AutoMapper" Version="13.0.1" />
     <PackageReference Include="BCrypt.Net-Next" Version="4.0.3" />
     <PackageReference Include="Microsoft.AspNetCore.Authentication.JwtBearer" Version="8.0.7" />
     <PackageReference Include="Microsoft.EntityFrameworkCore" Version="8.0.7" />
