Order Service Aplication

--- a/SivirCoffee/SivirCoffee.AuthenticationService/SivirCoffee.AuthenticationService.csproj
+++ b/SivirCoffee/SivirCoffee.AuthenticationService/SivirCoffee.AuthenticationService.csproj
@@ -35,6 +35,7 @@
 
   <ItemGroup>
     <ProjectReference Include="..\SivirCoffee.MenuService\SivirCoffee.MenuService.csproj" />
+    <ProjectReference Include="..\SivirCoffee.PaymentService\SivirCoffee.PaymentService.csproj" />
   </ItemGroup>
 
 </Project>
